added new folder for pages. Small fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,15 +4,19 @@ SET(CMAKE_CXX_COMPILER g++)
 
 project(tinygame)
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
+include_directories(
+    ${CMAKE_CURRENT_SOURCE_DIR}/src
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/pages
+)
 
 set(SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/application.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/game_page.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/splash.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/pages/game_page.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/pages/splash.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/player.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/lobby.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/pages/lobby.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/board.cpp
 )
 
 add_executable(app ${SOURCE})
